[gd_scene load_steps=13 format=2]

[ext_resource path="res://Resources/Puzzles/Puzzle.tscn" type="PackedScene" id=1]
[ext_resource path="res://Resources/Puzzles/Chapter I/ChargeVoltageCurrentQuestions/VoltageQuestions.gd" type="Script" id=2]
[ext_resource path="res://Resources/Objects/PuzzleGraphics/Terminal.png" type="Texture" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[node name="VoltageQuestions" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Background" parent="." index="0"]
margin_left = -0.698334
margin_right = -0.698334
color = Color( 0.352941, 0.352941, 0.352941, 1 )

[node name="Sprite" type="Sprite" parent="." index="2"]
position = Vector2( 158.607, 87.9889 )
scale = Vector2( 0.476, 0.567 )
texture = ExtResource( 3 )

[node name="InstructionLabel" type="Label" parent="." index="3"]
margin_left = 20.5543
margin_top = 24.4457
margin_right = 397.554
margin_bottom = 55.4457
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Voltage" type="LineEdit" parent="InstructionLabel" index="0"]
margin_left = 24.104
margin_top = 153.224
margin_right = 82.104
margin_bottom = 177.224
rect_scale = Vector2( 0.8, 0.8 )
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionLabel2" type="Label" parent="." index="4"]
margin_left = 20.599
margin_top = 58.221
margin_right = 306.599
margin_bottom = 89.221
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Energy" type="LineEdit" parent="InstructionLabel2" index="0"]
margin_left = 24.1735
margin_top = 104.476
margin_right = 82.1736
margin_bottom = 128.476
rect_scale = Vector2( 0.8, 0.8 )
custom_styles/read_only = SubResource( 4 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Charge" type="LineEdit" parent="InstructionLabel2" index="1"]
margin_left = 24.4726
margin_top = 103.724
margin_right = 82.4726
margin_bottom = 127.724
rect_scale = Vector2( 0.8, 0.8 )
custom_styles/read_only = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningLabel" type="Label" parent="." index="5"]
margin_left = 37.656
margin_top = 153.631
margin_right = 123.656
margin_bottom = 167.631
rect_scale = Vector2( 0.7, 0.7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cursor" type="Label" parent="." index="6"]
margin_left = 23.556
margin_top = 132.481
margin_right = 63.556
margin_bottom = 146.481
rect_scale = Vector2( 0.7, 0.7 )
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="InstructionLabel/Voltage" to="." method="_on_Voltage_text_entered"]
[connection signal="text_entered" from="InstructionLabel2/Energy" to="." method="_on_Energy_text_entered"]
[connection signal="text_entered" from="InstructionLabel2/Charge" to="." method="_on_Charge_text_entered"]
